--- a/examples/styles.css
+++ b/examples/styles.css
@@ -1,6 +1,15 @@
 body {
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol"
 }
+h1 {
+    margin-top: 4rem;
+    font-size: 1.5rem;
+    text-align: center;
+}
+h1 + p {
+    text-align: center;
+    color: grey;
+}
 .as-autocomplete {
     outline: none;
     border-radius: 5rem;
@@ -23,17 +32,21 @@ body {
     display: block;
     margin: 0 auto;
 }
+.as-result__dataset {
+    margin-bottom: 2rem;
+}
 .as-result__datasetItemsList, .as-result__datasetItem {
     padding: 0;
     margin: 0;
     list-style: none;
 }
 .as-result__datasetItemsList .as-result__datasetItem {
-    height: 2rem;
-    line-height: 2rem;
+    height: 2.5rem;
+    line-height: 2.5rem;
+    margin-bottom: .5rem;
 }
 .as-result__datasetItemsList .as-result__datasetItem--active {
-    background: rgb(230, 230, 230);
+    background: rgb(224, 255, 242);
 }
 .as-result__datasetItemsList .as-result__datasetItem a {
     color: #365067;
@@ -42,15 +55,24 @@ body {
     padding: 0 1rem;
     display: block;
     height: inherit;
-    line-height: inherit;
+    line-height: 1.25rem;
+}
+.as-result__datasetItemsList .as-result__datasetItem a span {
+    display: block;
+    max-width: inherit;
+    font-size: .7rem;
+    color: grey;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .as-result__datasetItemsList .as-result__datasetItem a:hover {
-    background-color: #e8e8e8;
+    background: rgb(224, 255, 242);
 }
 .as-result__datasetItemsList .as-result__datasetItem a em {
-    background: #cff5ff;
     font-weight: 600;
-    box-shadow: 0 1px #4d78f4;
+    background: rgba(50,255,173,.16);
+    box-shadow: 0 2px 0 0 #0ce999;
     font-style: initial;
 }
 .as-poweredBy {
@@ -60,11 +82,13 @@ body {
     margin-top: 1rem;
 }
 h3 {
-    margin: 0;
     font-weight: 600;
-    padding: 1rem 1rem .5rem 1rem;
+    padding: .5rem 1rem .5rem 1rem;
     color: #393939;
     text-transform: uppercase;
     letter-spacing: .2rem;
     font-size: .8rem;
+    border-bottom: 1px solid #f1f1f1;
+    background: #f5f5f5;
+    margin: 0 0 .5rem;
 }
