--- a/examples/styles.css
+++ b/examples/styles.css
@@ -92,3 +92,16 @@ h3 {
     background: #f5f5f5;
     margin: 0 0 .5rem;
 }
+
+.itemImage {
+    height: 30px;
+    display: inline-block;
+    padding: 4px 0;
+}
+
+.itemTitle {
+    display: inline-block;
+    margin-left: 5px;
+    vertical-align: middle;
+    height: 40px;
+}
